--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>React App</title>
-</head>
+<!--<head>-->
+<!--<title>React App</title>-->
+<!--</head>-->
 <body>
-<div id="root"></div>
+<div id="root" style="background-color:#1f2833; height: 100%"></div>
 </body>
 </html>
