--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--<head>-->
-<!--<title>React App</title>-->
-<!--</head>-->
 <body>
-<div id="root" style="background-color:#1f2833; height: 100%"></div>
+<div id="root"
+     style="background-color:#1f2833;
+     height: 800px"></div>
 </body>
 </html>
