--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,11 @@
 <body>
 <div id="root"
      style="background-color:#1f2833;
-     height: 800px"></div>
+     height: 800px">
+    <div>
+        <Login/>
+    </div>
+</div>
+
 </body>
 </html>
